--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "angular2-colcade": "^0.1.0",
+    "colcade": "^0.2.0",
     "masonry-layout": "^4.2.2",
     "ngx-masonry": "^14.0.1",
     "rxjs": "~7.8.0",
@@ -33,6 +35,7 @@
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/masonry-layout": "^4.2.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
