--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/masonry-layout": "^4.2.7",
+    "@types/sortablejs": "^1.15.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
